test/bad/generics/call09.px

func f<A>(x: A = "", y: A = "") def
    return

f(['x'])
